# PlasmaEngine

./: .gitmodules  CMakeLists.txt  README.md  index.js
Libraries/: CMakeLists.txt
Libraries/Common/: Diagnostic.hpp  Renderer.cpp  Renderer.hpp
Libraries/Content/: CMakeLists.txt
Libraries/Editor/: CMakeLists.txt
Libraries/Engine/: CMakeLists.txt  EngineStandard.hpp  Game.hpp  RaycastProvider.hpp  Space.hpp  Transform.cpp
Libraries/Gameplay/: CMakeLists.txt  CameraViewport.hpp  Exporter.cpp  Exporter.hpp  GameplayStandard.cpp  GameplayStandard.hpp  MouseCapture.cpp  MouseCapture.hpp  PathFinderMesh.cpp  PathFinderMesh.hpp  Plasma.cpp  Plasma.hpp  PlayGame.cpp  Precompiled.hpp  Reactive.cpp  TileMap.cpp  TileMap.hpp  UnitTestSystem.cpp  UnitTestSystem.hpp
Libraries/Geometry/: CMakeLists.txt
Libraries/Graphics/: GraphicsEngine.cpp  RendererGlobal.cpp  RendererThread.cpp  RendererThread.hpp  Sprite.cpp  Sprite.hpp  TextureLoader.cpp
Libraries/Lightning/: CMakeLists.txt
Libraries/LightningScript/: CMakeLists.txt  LightningPlugin.cpp  LightningScriptStandard.hpp
Libraries/Meta/: CMakeLists.txt
Libraries/Networking/: CMakeLists.txt
Libraries/Physics/: CMakeLists.txt
Libraries/PlasmaLauncherShell/: CMakeLists.txt
Libraries/Platform/BGFX/: BGFXRenderer.cpp  BGFXRenderer.hpp
Libraries/Platform/OpenGL/: OpenglRendererWindows.cpp
Libraries/Platform/Vulkan/: VulkanEnum.hpp  VulkanInitialization.hpp  VulkanPhysicalDevice.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanStandard.hpp  VulkanValidationLayer.hpp
Libraries/Platform/Windows/: CMakeLists.txt  Precompiled.hpp
Libraries/Replication/: CMakeLists.txt  ReplicaConfig.hpp
Libraries/Serialization/: CMakeLists.txt
Libraries/Sound/: CMakeLists.txt
Libraries/SpatialPartition/: CMakeLists.txt
Libraries/Startup/: CMakeLists.txt  Startup.cpp  StartupStandard.hpp
Resources/UiWidget/: UICaret.Archetype.data  UICaret.lightningfrag  UILineSprite.Archetype.data  UIManager.lightningscript  UINewLine.Archetype.data  UIRange.lightningscript  UISelectionSprite.Archetype.data  UITextBox.lightningscript  UITextHelpers.lightningscript  UiCaret.Material.data  UiTemplate.Level.data
Source/Core/Common/: Console.hpp  Renderer.hpp
Source/Core/Engine/: Project.cpp
Source/Core/Startup/: Startup.cpp
Source/Editor/PlasmaEditor/: CMakeLists.txt  GameOrEditorStartup.cpp
Source/Graphics/: CMakeLists.txt
Source/Graphics/GraphicsRuntime/: GraphicsEngine.cpp  GraphicsEngine.hpp  RendererThread.cpp  RendererThread.hpp
Source/Graphics/RendererGL/: OpenglRendererWindows.cpp
Source/Graphics/RendererVK/: CMakeLists.txt  Precompiled.hpp  RendererVKStandard.cpp  RendererVKStandard.hpp  VulkanExtensions.hpp  VulkanInitialization.hpp  VulkanInstance.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanStructures.hpp  VulkanSurface.hpp  VulkanValidation.hpp
Source/Launcher/PlasmaLauncher/: CMakeLists.txt
